src/objects/Survey_Responses__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Satisfaction__c</fullName>
        <inlineHelpText>Q# 10 - 2017 CSAT response</inlineHelpText>
        <label>Customer Service Satisfaction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Forms_of_Communication__c</fullName>
        <inlineHelpText>Q# 20 - 2017 CSAT Response</inlineHelpText>
        <label>Forms of Communication</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Likely_to_Continue_Services__c</fullName>
        <inlineHelpText>Q# 23 - 2017 CSAT Response</inlineHelpText>
        <label>Likely to Continue Services</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Continuation_Unlikely__c</fullName>
        <inlineHelpText>Q# 24 - 2017 CSAT Response - if Q#23 response is no or unlikely</inlineHelpText>
        <label>Service Continuation Unlikely</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Survey Responses</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Customer_Service_Satisfaction__c</columns>
        <columns>Forms_of_Communication__c</columns>
        <columns>Likely_to_Continue_Services__c</columns>
        <columns>Service_Continuation_Unlikely__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Responses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>